src/scss/Admin/StatusPage.scss
.status-page {
    width: 100%;
    background: $slate;
    .top-section {
        height: 85px;
        width: 100%;
        @include down($mini) {
            height: 65px;
        }
    }
    .container {
        width: 70%;
        padding: 8px;
        @include down($mini) {
            width: 80%;
        }
        @include down($mobile) {
            width: 100%;
        }
        .section-label {
            margin-bottom: 4px;
            font-size: 16px;
            @include down($mobile) {
                font-size: 14px;
            }
        }
        .filter-btn {
            padding: 8px 15px;
            background: $platinum;
            border: none;
            outline: none;
            border-radius: 50px;
            color: $pearl;
            margin-right: 10px;
            cursor: pointer;
            &:last-of-type {
                margin-right: 0;
            }
            @include down($mobile) {
                margin-right: 6px;
            }
            &.selected {
                box-shadow: 0px 0px 1px 1px $hitam inset;
                background: $blue-green;
            }
        }
        .dash-container {
            height: 48px;
            width: 75px;
            p {
                height: 10%;
                color: $hitam;
                font-size: 20px;
            }
        }
        .status-btn-container {
            background: $burnt;
            padding: 12px 16px;
            .status-btn {
                background: transparent;
                border: none;
                outline: none;
                cursor: pointer;
                &.not-included {
                    .status-name {
                        text-decoration: line-through;
                        color: $dark-grey;
                    }
                }
                .status-circle {
                    height: 16px;
                    width: 16px;
                    border-radius: 100%;
                    @include down($mobile) {
                        height: 12px;
                        width: 12px;
                    }
                }
                .equal {
                    display: inline-block;
                    margin-left: 4px;
                    color: $pearl;
                }
                .status-name {
                    display: inline-block;
                    margin-left: 4px;
                    color: $pearl;
                }
            }
        }
        &.order-cards-container {
            .order-card {
                padding: 8px;
                margin-bottom: 12px;
                &.open {
                    background: #b38cfa;
                }
                &.in-progress {
                    background: #ffcc99;
                }
                &.fulfilled {
                    background: #fa6f65;
                }
                * {
                    color: $hitam;
                }
                .order-heading {
                    margin-bottom: 4px;
                    .order-id {
                        font-size: 12px;
                        text-transform: uppercase;
                    }
                    .status-label {
                        background: transparent;
                        text-align-last: right;
                        border: none;
                        outline: none;
                    }
                }
                .line-item-card {
                    margin-bottom: 24px;
                    .line-item-heading {
                        margin-bottom: 6px;
                    }
                    .menu-item-name {
                        font-size: 16px;
                        font-style: italic;
                        text-decoration: underline;
                        text-underline-position: below;
                    }
                    .qty {
                        font-size: 14px;
                    }
                    .ingredients {
                        margin-bottom: 6px;
                        span {
                            font-size: 16px;
                            display: inline-block;
                            margin-right: 4px;
                        }
                    }
                    .instructions {
                        font-size: 16px;
                        display: inline-block;
                        margin-right: 4px;
                    }
                }
                .contact-info-container {
                    .name-and-department {
                        font-size: 14px;
                        margin-bottom: 4px;
                    }
                    .phone-and-date {
                        .phone {
                            font-size: 14px;
                        }
                        .date {
                            font-size: 14px;
                        }
                    }
                }
            }
        }
        &.empty-orders-container {
            p {
                background: $burnt;
                color: $pearl;
                padding-top: 75px;
                padding-bottom: 75px;
                font-size: 16px;
                @include down($mini) {
                    font-size: 12px;
                }
            }
        }
    }
}

